Fix: TTF-1307 - time element spacing
https://digitaltools.phe.org.uk/browse/TTF-1307

--- a/app/shared/components/List/style.scss
+++ b/app/shared/components/List/style.scss
@@ -94,13 +94,6 @@ $offset: 3.5rem;
       }
     }
 
-    .time {
-      bottom: 100%;
-      color: $body-text;
-      padding: .4em .4em .4em 0;
-      white-space: nowrap;
-    }
-
     .link-text {
       top: calc(100% + 2.5rem);
     }
@@ -264,4 +257,12 @@ $offset: 3.5rem;
       }
     }
   }
+}
+
+.time {
+  display: inline-block;
+  bottom: 100%;
+  color: $body-text;
+  padding: .4em .4em .4em 0;
+  white-space: nowrap;
 }
